--- a/style/newvote.css
+++ b/style/newvote.css
@@ -61,3 +61,32 @@ html, body {
     margin-left: 30%;
 }
 
+.navbar {
+    background-color: black !important;
+    padding: 0;
+    margin-top: 20px;
+    border-radius: 10px;
+}
+
+.navbar-light .navbar-brand {
+    font-size: 30px;
+    font-weight: bold;
+    color: white;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    border-radius: 4px;
+    font-size: 18px;
+    padding: 15px;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+    background-color: #2ecc71;
+}
+
+.navbar-toggler {
+    background-color: white !important;
+}
